<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mi Band Notifier</string>
    <string name="looking_for_miband">Looking for Mi Band</string>
    <string name="vibrations">Vibrations</string>
    <string name="duration">Duration</string>
    <string name="flash">Flash</string>
    <string name="colour">Colour</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="user_not_present">Non interactive</string>
    <string name="no_vibrate_outside_of_period">Lights outside of period</string>
    <string name="done">Done</string>
    <string name="temp_text">App Name</string>
    <string name="action_settings">Settings</string>
    <string name="test_band_vibrate">Test Band Vibrate</string>
    <string name="set_band_colour">Set Band LED Color</string>
    <string name="set_MAC_address">Set Mi Band MAC address</string>
    <string name="set_MAC_address_ok">MAC address set correctly</string>
    <string name="set_MAC_address_error">Invalid MAC address</string>
    <string name="set_MAC_address_removed">MAC address removed</string>
    <string name="alert_MAC_address">Mi Band not paired or MAC address required for connection</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="alert_delete">Delete?</string>
    <string name="select_app">Select an app</string>
    <string name="press_back">Press Back again to Exit.</string>
    <string name="interruption_none">Vibrate in Mode \'None\'</string>
    <string name="interruption_priority">Vibrate in Mode \'Priority\'</string>
</resources>
