<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="false">


    <TextView
        android:id="@+id/appNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="86dp"
        android:layout_marginTop="30dp"
        android:text="@string/temp_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/iconView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/vibrationsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="false"
        android:layout_alignStart="@+id/iconView"
        android:layout_below="@+id/iconView"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:minHeight="32dp"
        android:text="@string/vibrations"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/vibrationsSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/vibrationsLabel"
        android:layout_marginStart="19dp"
        android:layout_toEndOf="@+id/vibrationsLabel"
        android:max="4"
        android:minWidth="170dp"
        android:progress="1" />

    <!--<TextView
        android:id="@+id/vibrationDurationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/vibrationsLabel"
        android:layout_below="@+id/vibrationsLabel"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:minHeight="32dp"
        android:text="@string/duration"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/vibrationDurationSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/vibrationsSeekBar"
        android:layout_alignTop="@+id/vibrationDurationLabel"
        android:max="500"
        android:minWidth="170dp"
        android:progress="200" /> -->

    <TextView
        android:id="@+id/flashAmountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/vibrationsLabel"
        android:layout_below="@+id/vibrationsLabel"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:minHeight="32dp"
        android:text="@string/flash"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/flashAmountSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/vibrationsSeekBar"
        android:layout_alignTop="@+id/flashAmountLabel"
        android:max="4"
        android:minWidth="170dp"
        android:progress="1" />

    <Button
        android:id="@+id/colourButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/endTimeTextField"
        android:layout_below="@+id/endTimeTextField"
        android:layout_marginTop="20dp"
        android:minHeight="10dp"
        android:text="@string/colour" />

    <EditText
        android:id="@+id/startTimeTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/flashAmountSeekBar"
        android:layout_below="@+id/flashAmountSeekBar"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:focusable="false" />

    <TextView
        android:id="@+id/startPeriodLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/startTimeTextField"
        android:layout_alignStart="@+id/flashAmountLabel"
        android:layout_alignTop="@+id/startTimeTextField"
        android:gravity="center"
        android:minHeight="32dp"
        android:text="@string/start"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/endLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/endTimeTextField"
        android:layout_alignStart="@+id/startPeriodLabel"
        android:layout_below="@+id/startPeriodLabel"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:minHeight="32dp"
        android:text="@string/end"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/endTimeTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/startTimeTextField"
        android:layout_below="@+id/startTimeTextField"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:focusable="false" />

    <CheckBox
        android:id="@+id/priorityModeNone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/noVibrateCheckBox"
        android:layout_below="@+id/noVibrateCheckBox"
        android:checked="true"
        android:text="@string/interruption_none" />


    <CheckBox
        android:id="@+id/priorityModePriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/priorityModeNone"
        android:layout_below="@+id/priorityModeNone"
        android:checked="true"
        android:text="@string/interruption_priority" />

    <CheckBox
        android:id="@+id/noVibrateCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/endLabel"
        android:layout_alignTop="@+id/colourButton"
        android:layout_marginLeft="-7dp"
        android:checked="false"
        android:text="@string/no_vibrate_outside_of_period" />

    <Button
        android:id="@+id/doneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/colourButton"
        android:layout_below="@+id/colourButton"
        android:text="@string/done" />
</RelativeLayout>