<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="false">

    <TextView
        android:id="@+id/vibrationsLabelPlugin"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="false"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:minHeight="32dp"
        android:text="@string/vibrations"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/vibrationsSeekBarPlugin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/vibrationsLabelPlugin"
        android:layout_marginStart="19dp"
        android:layout_toEndOf="@+id/vibrationsLabelPlugin"
        android:max="4"
        android:minWidth="170dp"
        android:progress="1" />

    <TextView
        android:id="@+id/flashAmountLabelPlugin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/vibrationsLabelPlugin"
        android:layout_below="@+id/vibrationsSeekBarPlugin"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:minHeight="32dp"
        android:text="@string/flash"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/flashAmountSeekBarPlugin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/vibrationsSeekBarPlugin"
        android:layout_alignTop="@+id/flashAmountLabelPlugin"
        android:max="4"
        android:minWidth="170dp"
        android:progress="1" />

    <TextView
        android:id="@+id/flashDurationLabelPlugin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/flashAmountLabelPlugin"
        android:layout_below="@+id/flashAmountLabelPlugin"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:minHeight="32dp"
        android:text="@string/duration"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/flashDurationSeekBarPlugin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/flashAmountSeekBarPlugin"
        android:layout_alignTop="@+id/flashDurationLabelPlugin"
        android:max="500"
        android:minWidth="170dp"
        android:progress="250" />

    <Button
        android:id="@+id/colourButtonPlugin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"
        android:minHeight="10dp"
        android:text="@string/colour"
        android:layout_below="@+id/flashDurationSeekBarPlugin" />

</RelativeLayout>